fixed overflow for mobile again :/

--- a/src/IntroModal/Carousel.css
+++ b/src/IntroModal/Carousel.css
@@ -4,7 +4,6 @@
     border-radius: 8px;
     margin-top: 0px;
     padding: 0 40px;
-    overflow: scroll;
 }
 
 .text-body
