--- a/src/IntroModal/Modal.css
+++ b/src/IntroModal/Modal.css
@@ -25,6 +25,7 @@
     text-align: center;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: scroll;
 }
 
 @media  only screen and (max-width: 1000px) {
